--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="position-sticky top-0" style="z-index: 100;">
         <nav class="navbar bg-light shadow-sm">
             <div class="container-fluid">
                 <a href="#" class="navbar-brand">
@@ -26,14 +26,15 @@
             </div>
         </nav>
     </header>
-    <main class="container p-3">
-        <div class="row g-3">
+    <main class="container-fluid p-3">
+        <div class="row g-3 my-3">
             <div class="col">
                 <div class="col card shadow scale-up">
                     <div class="position-relative">
                         <img class="card-img-top " src="./images/dashboard.png" />
                         <div class="cover">
-                            <a class="btn btn-dark text-white" href="./images/dashboard.png" target="_blank">Visualizar</a>
+                            <a class="btn btn-dark text-white" href="./images/dashboard.png"
+                                target="_blank">Visualizar</a>
                         </div>
                     </div>
                     <div class="card-body">
@@ -49,7 +50,8 @@
                     <div class="position-relative">
                         <img class="card-img-top " src="./images/products.png" />
                         <div class="cover">
-                            <a class="btn btn-dark text-white" href="./images/dashboard.png" target="_blank">Visualizar</a>
+                            <a class="btn btn-dark text-white" href="./images/dashboard.png"
+                                target="_blank">Visualizar</a>
                         </div>
                     </div>
                     <div class="card-body">
@@ -64,7 +66,8 @@
                     <div class="position-relative">
                         <img class="card-img-top " src="./images/product_edition.png" />
                         <div class="cover">
-                            <a class="btn btn-dark text-white" href="./images/product_edition.png" target="_blank">Visualizar</a>
+                            <a class="btn btn-dark text-white" href="./images/product_edition.png"
+                                target="_blank">Visualizar</a>
                         </div>
                     </div>
                     <div class="card-body">
@@ -79,7 +82,8 @@
                     <div class="position-relative">
                         <img class="card-img-top " src="./images/categories.png" />
                         <div class="cover">
-                            <a class="btn btn-dark text-white" href="./images/categories.png" target="_blank">Visualizar</a>
+                            <a class="btn btn-dark text-white" href="./images/categories.png"
+                                target="_blank">Visualizar</a>
                         </div>
                     </div>
                     <div class="card-body">
@@ -88,8 +92,73 @@
                     </div>
                 </div>
             </div>
-
         </div>
+        <div class="row g-3 my-3">
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/products_stock.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/products_stock.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-green">Estoque de produtos</h6>
+                        <small class="card-text">Saiba quais produtos estão acabando.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/cash_flow.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/cash_flow.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-green">Fluxo do caixa</h6>
+                        <small class="card-text">Rastreie a entrada e saída de dinheiro através das vendas.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/employees.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/employees.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-green">Funcionários</h6>
+                        <small class="card-text">Controle os funcionários da tua empresa.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/access_levels.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/access_levels.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-green">Níveis de acesso</h6>
+                        <small class="card-text">Controle o que os vendedores podem ou não fazer.</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 
