--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
         </nav>
     </header>
     <main class="container-fluid p-3">
+        <h1 class="display-5 text-orange">Módulo Administrativo</h1>
+        <hr/>
         <div class="row g-3 my-3">
             <div class="col">
                 <div class="col card shadow scale-up">
