--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,10 @@
         </nav>
     </header>
     <main class="container-fluid p-3">
-        <h1 class="display-5 text-orange">Módulo Administrativo</h1>
+
+        <h1 class="display-5 text-green"># Módulo Administrativo</h1>
         <hr/>
+
         <div class="row g-3 my-3">
             <div class="col">
                 <div class="col card shadow scale-up">
@@ -156,6 +158,75 @@
                     <div class="card-body">
                         <h6 class="card-title text-green">Níveis de acesso</h6>
                         <small class="card-text">Controle o que os vendedores podem ou não fazer.</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <h1 class="display-5 text-orange"># PDV - Frente de Caixa</h1>
+        <hr/>
+
+        <div class="row g-3 my-3">
+            <div class="col">
+                <div class="col card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/pdv.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/pdv.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-orange">PDV</h6>
+                        <small class="card-text">Desfrute de uma interface limpa e fácil.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/pdv2.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/pdv2.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-orange">Acessibilidade</h6>
+                        <small class="card-text">Realiza as vendas de um modo fácil.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/profile.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/profile.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-orange">Perfil do vendedor</h6>
+                        <small class="card-text">Permita aos vendores visualizarem os seus dados.</small>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card shadow scale-up">
+                    <div class="position-relative">
+                        <img class="card-img-top " src="./images/open_box.png" />
+                        <div class="cover">
+                            <a class="btn btn-dark text-white" href="./images/open_box.png"
+                                target="_blank">Visualizar</a>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-title text-orange">Abertura do caixa</h6>
+                        <small class="card-text">Abertura do caixa de uma maneira segura.</small>
                     </div>
                 </div>
             </div>
